--- a/src/component/catalogItem.hbs
+++ b/src/component/catalogItem.hbs
@@ -1,5 +1,31 @@
-<div class='card'>
-    <div class='pt-2 pb-2 px-3'>
-
+<section class='col-6 mb-2'>
+    <div class='card'>
+        <img class='card-img-top' src='{{img}}' />
+        <div class='pt-2 pb-2 px-3'>
+            {{#if isHot includeZero=true}} <span class='ms-0 mx-2 badge rounded-pill text-bg-warning text-uppercase'>Hot!</span> {{/if}}
+            {{#if isNew includeZero=true}} <span class='badge rounded-pill text-bg-primary'>Нове</span> {{/if}}
+            <div class='mt-3 mb-3'>
+                {{#if isFast includeZero=true}} <span class='mb-2 badge text-bg-success'>Швидка доставка</span> {{/if}}
+                {{#if isFree includeZero=true}} <span class='badge text-bg-secondary'>Безкоштовна доставка</span> {{/if}}
+            </div>
+            <h5 class='mb-3'>{{name}}</h5>
+            {{#with review}}
+                <p>{{amount}} {{text}}</p>
+            {{/with}}
+            <h5 class='mb-3'>{{price}}</h5>
+            <p>{{delivery}}</p>
+            {{#each buttons}}
+                <div class="mb-3">
+                    <a href='{{link}}' class="
+					{{#if isPrimary includeZero=true}} btn btn-primary {{/if}}
+					{{#if isSecondary includeZero=true}} btn btn-secondary {{/if}}">{{text}}</a>
+                </div>
+            {{/each}}
+			{{#each characteristics}}
+				<ul>
+					<li>{{title}}: {{value}}</li>
+				</ul>
+			{{/each}}
+        </div>
     </div>
-</div>
+</section>
