--- a/src/container/shopcatalog.hbs
+++ b/src/container/shopcatalog.hbs
@@ -37,7 +37,7 @@
             </section>
         {{/each}}
     </div>
-    <div class='row gx-2'>
+    <div class='row gx-3'>
         <section class='col-4'>
             <div class='card'>
                 <div class='pt-2 pb-2 px-3'>
@@ -92,9 +92,34 @@
                 </div>
             </div>
         </section>
-        {{#each goodsList}}
-            <section class="col-4">
-                {{> catalogItem}}
+        <div class="col-8 row gx-1">
+            {{#each goodsList}}
+                {{>catalogItem}}
+            {{/each}}
+        </div>
+    </div>
+    {{#with service}}
+        <div class='mt-5 card text-bg-success text-center'>
+            <div class='pt-2 pb-2 px-2'>
+                <h2>{{title}}</h2>
+                <p>{{description}}</p>
+                {{#each buttons}}
+                    <a href="{{link}}" class="btn btn-primary">{{text}}</a>
+                {{/each}}
+            </div>
+        </div>
+    {{/with}}
+
+    <hr class="mt-5 mb-2">
+    
+    <div class="row mt-1">
+        {{#each footer}}
+            <section class="col-2 p-0">
+                {{#each this}}
+                    <div>
+                        <a href="{{link}}" class="btn btn-link">{{text}}</a>
+                    </div>
+                {{/each}}
             </section>
         {{/each}}
     </div>
